Fix the bug where page will not scroll to bottom when contact us is clicked on mobile.

--- a/themes/sosnpr/sass/_footer.scss
+++ b/themes/sosnpr/sass/_footer.scss
@@ -136,7 +136,7 @@
   padding: 20px 0;
   justify-content: center;
   align-items: center;
-  z-index: 15;
+  z-index: 100;
   
   // @include tablet{
     height: 100vh;
