--- a/themes/sosnpr/style.css
+++ b/themes/sosnpr/style.css
@@ -1007,7 +1007,7 @@ object {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 15;
+  z-index: 100;
   height: 100vh;
   background: rgba(0, 0, 0, 0.6);
   top: 0;
